--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,53 @@
-body {
-  background-color: #FFFFFF;
 
+body {
+background-image: url(file:///Users/julievatuone/Documents/Georgia%20Tech%20Bootcamp/Week%2017%20Coding/Unit_17_HW_Template/images/paris_cityscape.jpeg);
+background-size: contain;
+}
+header{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  background: #616880;
+  height: 70px;
+}
+.sticky {
+  position: fixed;
+  top:0;
+  width: 100%;
+}
+.logo{
+  margin: 15px 0 0 0;
+}
+
+nav {
+  margin: 25px;
+}
+ul li{
+  list-style: none;
+  display: inline;
+}
+ul li a,
+h1 a{
+  text-decoration: none;
+  color: #fff;
+  padding: 5px;
 }
 header {
   background-color: #DED5C6;
   padding: 40px;
+  cursor: pointer;
 }
 header ul {
-  float: right;
   color: #004D84;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 header li {
-  display: inline-block;
-  padding: 0px 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 header p {
   display: inline-block;
@@ -23,10 +56,18 @@ header p {
   padding: 100px 15px;
   margin-left: 200px;
   margin-right: 200px;
+
 }
 #pic{
-width: 360px;
-height: 480px;
+  width: 360px;
+  height: 480px;
+  opacity: 100%;
+  }
+#pic:hover{
+  cursor: pointer;
+}
+h1 {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .content {
@@ -34,12 +75,13 @@ height: 480px;
   height: auto;
   margin: 0 auto;
   padding: 50px;
-  background-color: #ded5c6;
+  background-color: rgba(222, 213, 198, 0.8);
   text-align: center;
 }
-button {
+
+.button {
   color: white;
-  background-color: 004D84
+  background-color: 004D84;
   height: 40px;
   margin: 0 auto;
   text-align: center;
@@ -56,14 +98,34 @@ button {
   font-size: 15px;
   border-radius: 4px;
 }
+#container {
+  width: auto;
+  height: auto;
+  margin: auto;
+  background-color: slategrey;
+  outline-color grey; 5px solid;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  grid-gap: 10px;
+  /*
+  align-items: center;
+  justify-items: stretch;
+  /*
+  align-content:
+  justify-content:
+  place-content: 
+}
 .linkedin {
   background: #007bb5;
   color: white;
 }
 footer {
-  background-color: #373738;
+  background-color: #DED5C6;
   padding: 5px;
-  color: white;
+  color: rgb(31, 30, 30);
 }
 footer ul {
   list-style: none;
@@ -72,4 +134,16 @@ footer ul {
 footer li {
   display: inline-block;
   padding: 0px 7px;
+}
+@media screen and (max-width: 991px){
+  .content {
+      background-color: skyblue;
+  }
+#pic{
+  height: 50%;
+  width: 50%;
+}
+h1 {
+  font-size:smaller;
+}
 }
