--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,14 @@ h1 {
   font-weight: bold;
   transition: all .7s ease;
 }
+#userResearch {
+display: block;
+margin-left: auto;
+margin-right: auto;
+height: 50%;
+width: 50%;
+
+}
 button {
   padding: 15px;
   background-color: #373738;
@@ -98,25 +106,32 @@ button {
   font-size: 15px;
   border-radius: 4px;
 }
+h2 {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: flex;
+  justify-content: center;
+
+}
 #container {
   width: auto;
   height: auto;
   margin: auto;
   background-color: slategrey;
-  outline-color grey; 5px solid;
+  outline-color: white; 
+  outline-width: 6px;
+  outline-style: dashed;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   grid-gap: 10px;
-  /*
-  align-items: center;
-  justify-items: stretch;
-  /*
-  align-content:
-  justify-content:
-  place-content: 
+}
+.item {
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
 }
 .linkedin {
   background: #007bb5;
