--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
-
+html {
+  scroll-behavior: smooth;
+}
 body {
-background-image: url(file:///Users/julievatuone/Documents/Georgia%20Tech%20Bootcamp/Week%2017%20Coding/Unit_17_HW_Template/images/paris_cityscape.jpeg);
-background-size: contain;
+font-family: sans-serif;
+background-image: url(../images/paris_cityscape.jpeg);
+background-size: cover;
+background-repeat: no-repeat;
 }
 header{
   display: flex;
@@ -15,9 +19,6 @@ header{
   top:0;
   width: 100%;
 }
-.logo{
-  margin: 15px 0 0 0;
-}
 
 nav {
   margin: 25px;
@@ -25,6 +26,7 @@ nav {
 ul li{
   list-style: none;
   display: inline;
+  font-size:22px;;
 }
 ul li a,
 h1 a{
@@ -52,6 +54,7 @@ header li {
 header p {
   display: inline-block;
 }
+/*body stuff*/
 .heroImg {
   padding: 100px 15px;
   margin-left: 200px;
@@ -86,6 +89,7 @@ h1 {
   margin: 0 auto;
   text-align: center;
   padding-top: 20px;
+  padding-bottom: 32px;
   cursor: pointer;
   font-family: Lato;
   font-weight: bold;
@@ -119,7 +123,7 @@ h2 {
   background-color: slategrey;
   outline-color: white; 
   outline-width: 6px;
-  outline-style: dashed;
+  outline-style: solid;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
@@ -139,16 +143,33 @@ h2 {
 }
 footer {
   background-color: #DED5C6;
-  padding: 5px;
-  color: rgb(31, 30, 30);
+  padding: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
+
 footer ul {
   list-style: none;
   padding-left: 5px;
+  display:flex;
+  justify-content: center;
+  width: 100%;
 }
 footer li {
   display: inline-block;
-  padding: 0px 7px;
+  padding: 0px 100px;
+}
+
+.copyright {
+    bottom:0;
+    width:75%;
+    height:60px;
+    text-align: center;
+    color: #098d9b;
+    vertical-align: auto;
+   
 }
 @media screen and (max-width: 991px){
   .content {
@@ -161,4 +182,36 @@ footer li {
 h1 {
   font-size:smaller;
 }
+h2{
+  font-size: smaller;
 }
+}
+/*bounce arrow animation*/
+a.fa { color: white; text-decoration: none; }
+
+.arrow {
+    text-align: center;
+    margin: 0 auto;
+    color: #c6a759;
+  }
+  .bounce {
+    padding-bottom: 50px;
+    margin: 0 auto;
+    -moz-animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  }
+/* Mobile Css*/
+
